[package]
name = "quick-replace"
version = "0.1.0"
description = "Quick, lightweight find and replace tool."
repository = "https://github.com/acaala/qrep"
categories = ["command-line-interface"]
edition = "2021"
license = "MIT"
keywords = ["cli", "find", "replace", "quick", "lightweight"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
zip = "0.6.4"
